# hyprland-app-timer-gui

./: .gitignore  Cargo.toml  README.md  flake.nix  io.github.zd4y.HyprlandAppTimer.json  meson.build
data/: hyprland-app-timer-gui.gresource.xml  io.github.zd4y.HyprlandAppTimer.desktop.in  io.github.zd4y.HyprlandAppTimer.gschema.xml  io.github.zd4y.HyprlandAppTimer.metainfo.xml.in  meson.build
data/icons/: meson.build
data/ui/: window.ui
po/: POTFILES  meson.build
src/: application.rs  hyprland-app-timer-gui.gresource.xml  main.rs  meson.build  pie_chart.rs  window.rs
