[package]
name = "hyprland-app-timer-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.7", package = "gtk4" }
hyprland-app-timer = { path = "../hyprland-app-timer" }
tokio = { version = "1.34.0", features = ["full"] }

[dependencies.adw]
package = "libadwaita"
version = "0.5"
features = ["v1_4"]
