[package]
name = "hyprland-app-timer-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.7", package = "gtk4" }
humantime = "2.1.0"
hyprland-app-timer = { git = "https://github.com/zd4y/hyprland-app-timer.git", features = ["db", "client"] }
pangocairo = "0.18.0"
tokio = { version = "1.34.0", features = ["full"] }

[dependencies.adw]
package = "libadwaita"
version = "0.5"
features = ["v1_4"]
